# ESRGAN

./: pyproject.toml
src/esrgan_very_amused/: __main__.py  esrgan.py
src/esrgan_very_amused/utils/architecture/: RRDB.py  SPSR.py
